Improve framework stability and logging with numerous code refinements
Refactor and enhance core framework components, including logging, plugin management, player interactions, and scheduler functionality.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 0ade85cf-4642-4b72-93ac-c7ff3426fa3f
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: e81b3295-2800-46da-8da0-9bd1d8379d8c
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/b46ba5a5-086e-49a5-a535-37f214b2b3c5/0ade85cf-4642-4b72-93ac-c7ff3426fa3f/ABZi3rs
Replit-Helium-Checkpoint-Created: true